Raise language level to 16 using jabel (#5259)
* Raise language level to 16 using jabel

* Make github actions happy

* Make github actions build using java 16